# EDAsh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
catalog/: analog.yaml  digital.yaml  formal.yaml  fpga.yaml  index.yaml  tools.yaml
catalog/pdks/: gf180.yaml  ihp-sg13g2.yaml  sky130.yaml
docs/: architecture.md  faq.md  glossary.md  wip.md
src/: actions.rs  config.rs  installation.rs  lib.rs  main.rs  paths.rs
src/backend/: micromamba.rs  mod.rs  oss_cad_suite.rs
src/catalog/: index.rs  mod.rs  resolver.rs  source.rs
src/cli/: clean.rs  doctor.rs  env.rs  export.rs  install.rs  installer.rs  list.rs  mod.rs  outdated.rs  pdk.rs  remove.rs  repair.rs  search.rs  shell.rs  update.rs  verify.rs  why.rs
src/doctor/: checks.rs
src/lockfile/: mod.rs  schema.rs  verifier.rs  writer.rs
src/manifest/: schema.rs
src/pdk/: ciel.rs  config.rs  mod.rs
src/tui/: mod.rs  widgets.rs
src/tui/overlays/: confirm.rs  help.rs  mod.rs
src/tui/screens/: catalog.rs
tests/: actions.rs  catalog_source.rs  index_types.rs  installation.rs  installer.rs  lockfile.rs  mock_backend.rs  paths.rs  pdk_config.rs  resolver.rs  resolver_expanded.rs
