[package]
name = "edash"
version = "0.1.4"
edition = "2021"
description = "Open-source EDA toolchain manager for ASIC, FPGA, and analog design"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
dirs = "6"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync"] }
which = "7"
ratatui = "0.29"
crossterm = "0.28"
is-terminal = "0.4"

[dev-dependencies]
tempfile = "3"
